# scovie

./: .editorconfig  .flake8  .gitignore  LICENSE  Makefile  README.md  index.html  knexfile.ts  manage.py  manage.sh  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  todo.py  tsconfig.json  vue.config.js
.github/workflows/: ci.yml  codeql.yml  main.yml  tests.yml
.meteor/: .id  packages  versions
backend/: package-lock.json
client/: main.html
config/: default.json
frontend/: index.html  package.json  vite.config.js
frontend/src/: main.css  main.js
imports/api/: announcements.js  caroussel.js  configuration.js  planning.js  rooms.js  times.js
imports/ui/: Admin.vue  App.vue  main.js
imports/ui/admin/: dashboard.vue
imports/ui/events/: ValentineDay.vue
imports/ui/screen/: AnnouncementsComponent.vue  CarousselComponent.vue  HeaderComponent.vue  PlanningComponent.vue
lib/: app.d.ts  app.js  authentication.d.ts  authentication.js  channels.d.ts  channels.js  client.d.ts  client.js  configuration.d.ts  configuration.js  declarations.d.ts  index.js  logger.js  sqlite.d.ts  sqlite.js  validators.d.ts  validators.js
lib/hooks/: log-error.d.ts  log-error.js
lib/services/: index.d.ts  index.js
lib/services/users/: users.class.d.ts  users.class.js  users.d.ts  users.js  users.schema.d.ts  users.schema.js
locale/fr/LC_MESSAGES/: django.mo  django.po
migrations/: 20230129072847_user.ts  20230129072857_authentication.ts  20230129073905_announcement.ts
public/: index.html
scovie/: __init__.py  admin.py  apps.py  asgi.py  environment.py  forms.py  models.py  publish.py  settings.py  urls.py  views.py  wsgi.py
scovie/management/commands/: firstinstall.py
scovie/migrations/: 0001_initial.py
scovie/settings/: base.py  local.py  prod.py  test.py
scovie/templates/admin/: planning_change_list.html
scovie/templates/components/: announcements.html  footer.html  header.html  planning.html
scovie/templates/events/: valentine.html
scovie/templates/pages/: all.html  caroussel.html  emergency.html
scovie/tests/: test_django_project.py  test_example_project_urls_1.snapshot.html  test_project_setup.py  test_utils.py  test_views_debug.py  test_views_debug_urls_1.snapshot.html  test_views_login_required.py
screen/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
screen/management/commands/: firstinstall.py  update.py
screen/migrations/: 0001_initial.py  0002_alter_announcement_options_and_more.py  0002_configuration_carnival_date_and_more.py  0003_alter_teacher_name.py  0003_media.py  0004_rename_content_media_image.py  0005_alter_media_image.py  0006_alter_media_image.py  0007_alter_media_image.py  0008_alter_announcement_options_alter_room_options_and_more.py  0009_alter_announcement_type.py  0010_alter_configuration_value.py
screen/static/css/: main.css
screen/static/js/: heart.js
screen/templates/: index.html
screen/templates/admin/: planning_change_list.html
screen/templates/components/: announcements.html  caroussel.html  footer.html  header.html  planning.html
screen/templates/events/: carnival.html  valentine.html
screen/templates/pages/: emergency.html  informations.html
server/: main.js
src/: App.vue  app.ts  channels.ts  client.ts  index.ts  main.js  sqlite.ts  validators.ts
src/components/events/: ValentineDayComponent.vue
src/components/screen/: AnnouncementsComponent.vue  CarousselComponent.vue  FooterComponent.vue
src/hooks/: log-runtime.ts
src/services/: index.ts
src/services/announcements/: announcements.class.ts  announcements.ts  (+1 more)
static/css/: main.css
static/js/: heart.js
tools/: scovie.desktop  screen.sh  server.sh
(+4 files in other folders)
